// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TournamentDetailRow Renders correctly 1`] = `
<div class="collapse card">
  <div class="collapse-trigger">
    <div role="button" class="card-header"><span class="card-header-title"><span>Edit tournament</span></span> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-down mdi-24px"></i></span></a></div>
  </div>
  <div id="newEntryForm" aria-expanded="true" class="collapse-content">
    <div class="card-content">
      <div class="columns">
        <div class="column is-half">
          <div class="field">
            <div class="columns">
              <div class="column is-half">
                <div class="field is-floating-label"><label class="label">Name of tournament</label>
                  <div class="control is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" class="input">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="column is-half">
                <div class="field has-addons">
                  <!---->
                  <div class="control is-expanded"><label class="b-radio radio button is-primary">
                      International
                      <input type="radio" value="true"></label></div>
                  <div class="control is-expanded"><label class="b-radio radio button">
                      National
                      <input type="radio" value="false"></label></div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label has-addons"><label class="label">Place of the tournament</label>
              <div class="control has-icons-left is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" placeholder="City" class="input"> <span class="icon is-left"><i class="mdi mdi-city mdi-24px"></i></span>
                <!---->
                <!---->
              </div>
              <div class="autocomplete control is-expanded">
                <div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" placeholder="Country" class="input"> <span class="icon is-left"><i class="mdi mdi-earth mdi-24px"></i></span>
                  <!---->
                  <!---->
                </div>
                <div class="dropdown-menu" style="display: none;">
                  <div class="dropdown-content" style="display: none;">
                    <!----> <a class="dropdown-item"><span>
                            Finland
                        </span></a>
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label"><label class="label">Dates</label>
              <div class="datepicker control">
                <div class="dropdown dropdown-menu-animation is-inline is-active">
                  <!---->
                  <!---->
                  <div aria-hidden="true" class="dropdown-menu">
                    <div class="dropdown-content">
                      <!---->
                      <div tabindex="0" class="dropdown-item">
                        <div>
                          <header class="datepicker-header">
                            <div class="pagination field is-centered"><a role="button" href="#" class="pagination-previous"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" class="pagination-next"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
                              <div class="pagination-list">
                                <div class="field has-addons">
                                  <!---->
                                  <div class="control"><span class="select"><select><!----> <option value="0">
                                            January
                                        </option><option value="1">
                                            February
                                        </option><option value="2">
                                            March
                                        </option><option value="3">
                                            April
                                        </option><option value="4">
                                            May
                                        </option><option value="5">
                                            June
                                        </option><option value="6">
                                            July
                                        </option><option value="7">
                                            August
                                        </option><option value="8">
                                            September
                                        </option><option value="9">
                                            October
                                        </option><option value="10">
                                            November
                                        </option><option value="11">
                                            December
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <div class="control"><span class="select"><select><!----> <option value="2021">
                                            2021
                                        </option><option value="2020">
                                            2020
                                        </option><option value="2019">
                                            2019
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <!---->
                                </div>
                              </div>
                            </div>
                          </header>
                          <div class="datepicker-content">
                            <section class="datepicker-table">
                              <header class="datepicker-header">
                                <div class="datepicker-cell"><span>M</span></div>
                                <div class="datepicker-cell"><span>Tu</span></div>
                                <div class="datepicker-cell"><span>W</span></div>
                                <div class="datepicker-cell"><span>Th</span></div>
                                <div class="datepicker-cell"><span>F</span></div>
                                <div class="datepicker-cell"><span>S</span></div>
                                <div class="datepicker-cell"><span>Su</span></div>
                              </header>
                              <div class="datepicker-body">
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>27</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>28</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>29</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>30</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>31</span></div><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>1</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>2</span>
                                    <!----></a>
                                </div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>3</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>4</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>5</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>6</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>7</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>8</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>9</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>10</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>11</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>12</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>13</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>14</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>15</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>16</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>17</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>18</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>19</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>20</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>21</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>22</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>23</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" class="datepicker-cell is-selected is-first-selected is-last-selected is-selectable dots"><span>24</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-today is-selectable dots"><span>25</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>26</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>27</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>28</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>29</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>30</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>31</span>
                                    <!----></a>
                                  <div class="datepicker-cell is-unselectable"><span>1</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>2</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>3</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>4</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>5</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>6</span></div>
                                </div>
                              </div>
                            </section>
                          </div>
                        </div>
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div class="field"><label class="label"><button type="button" class="button is-text">
                <!----> <span>Notes (0)
                  </span> <span class="icon is-small"><i class="mdi mdi-menu-up"></i></span></button></label>
            <!---->
            <div class="field is-floating-label has-addons"><label class="label">Add a note</label>
              <div class="control is-expanded is-clearfix"><textarea maxlength="256" placeholder="Type a message" rows="1" class="textarea"></textarea>
                <!---->
                <!----> <small class="help counter is-invisible">
                  0 / 256
                </small></div> <button type="button" class="button add-note-btn is-info"><span class="icon is-small"><i class="mdi mdi-comment-text-outline"></i></span> <span>Add note
                  </span>
                <!----></button>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div class="column is-half">
          <div id="td-field" class="field">
            <div class="field"><label class="label">Tournament Director / TD</label>
              <div class="columns">
                <!---->
                <div class="column is-half"><span class="tag td-tag is-medium is-rounded"><span class="">
                            John Doe
                            &lt;john.doe@example.org&gt;
                        </span> <a role="button" tabindex="0" class="delete is-small"></a></span></div>
              </div>
              <!---->
            </div>
          </div>
          <div id="referees-field" class="field">
            <div class="field"><label class="label">Referees</label>
              <!---->
            </div>
            <div class="b-table no-margin-on-control referee-table">
              <!---->
              <!---->
              <div class="table-wrapper has-mobile-cards">
                <table class="table is-hoverable">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap">Name
                          <!---->
                        </div>
                      </th>
                      <th class="" style="width: 140px;">
                        <div class="th-wrap is-centered">Games as referee
                          <!---->
                        </div>
                      </th>
                      <th class="" style="width: 140px;">
                        <div class="th-wrap is-centered">Games as 10s / official
                          <!---->
                        </div>
                      </th>
                      <th class="">
                        <div class="th-wrap">
                          <!---->
                        </div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        John Doe
                      </td>
                      <td data-label="Games as referee" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td data-label="Games as 10s / official" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td class=""><span data-label="Remove referee from tournament" class="is-danger is-bottom is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-danger is-outlined"><span class="icon is-small"><i class="mdi mdi-close"></i></span>
                        <!---->
                        <!----></button></span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        Jane Doe
                      </td>
                      <td data-label="Games as referee" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td data-label="Games as 10s / official" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td class=""><span data-label="Remove referee from tournament" class="is-danger is-bottom is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-danger is-outlined"><span class="icon is-small"><i class="mdi mdi-close"></i></span>
                        <!---->
                        <!----></button></span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        Noob Nederson
                      </td>
                      <td data-label="Games as referee" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td data-label="Games as 10s / official" class="has-text-centered">
                        <div class="b-numberinput field has-addons">
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-minus mdi-24px"></i></span></button></p>
                          <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" class="input">
                            <!---->
                            <!---->
                            <!---->
                          </div>
                          <p class="control"><button type="button" class="button is-primary"><span class="icon"><i class="mdi mdi-plus mdi-24px"></i></span></button></p>
                        </div>
                      </td>
                      <td class=""><span data-label="Remove referee from tournament" class="is-danger is-bottom is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-danger is-outlined"><span class="icon is-small"><i class="mdi mdi-close"></i></span>
                        <!---->
                        <!----></button></span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </tbody>
                  <!---->
                </table>
              </div>
              <!---->
            </div>
            <div class="field is-floating-label has-addons"><label class="label">Add referee</label>
              <div class="autocomplete control is-expanded">
                <div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" placeholder="Search by name, email or nationality" class="input"> <span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
                  <!---->
                  <!---->
                </div>
                <div class="dropdown-menu" style="display: none;">
                  <div class="dropdown-content" style="display: none;">
                    <!---->
                    <div class="dropdown-item is-disabled">
                      No results for
                      <button type="button" class="button is-text"><span class="icon is-small"><i class="mdi mdi-account-plus"></i></span> <span>
                              New referee
                            </span>
                        <!----></button></div>
                    <!---->
                  </div>
                </div>
              </div> <span data-label="Add new referee to system" class="is-info is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-info is-outlined"><span class="icon is-small"><i class="mdi mdi-account-plus"></i></span> <span>
                        New referee
                      </span>
              <!----></button></span>
              <!---->
              <!---->
            </div>
          </div>
          <div class="field">
            <div class="field"><label class="label">Teams competing</label>
              <div>
                <div class="field has-addons">
                  <!---->
                  <div class="autocomplete control is-expanded">
                    <div class="control is-clearfix"><input type="text" autocomplete="off" placeholder="Team name / Country" class="input">
                      <!---->
                      <!---->
                      <!---->
                    </div>
                    <div class="dropdown-menu" style="display: none;">
                      <div class="dropdown-content" style="display: none;">
                        <!---->
                        <!---->
                        <!---->
                      </div>
                    </div>
                  </div> <button type="button" disabled="disabled" class="button is-info"><span class="icon is-small"><i class="mdi mdi-plus"></i></span> <span>
      Add
    </span>
                    <!----></button>
                  <!---->
                </div>
                <div class="team-list"><span class="tag is-medium"><span class="">
        Team A
    </span> <a role="button" aria-label="Remove team" tabindex="0" class="delete is-small"></a></span><span class="tag is-medium"><span class="">
        Team B
    </span> <a role="button" aria-label="Remove team" tabindex="0" class="delete is-small"></a></span></div>
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <!---->
      <div class="tournament-meta">
        Created by John Doe at 7/24/2020.
        Last update: 8/19/2020.
      </div>
      <!---->
    </div>
    <div class="card-footer"><button type="button" class="button card-footer-item is-primary is-outlined"><span class="icon is-small"><i class="mdi mdi-check-circle-outline"></i></span> <span>
            Update
        </span>
        <!----></button> <button type="button" class="button card-footer-item is-light"><span class="icon is-small"><i class="mdi mdi-cancel"></i></span> <span>
            Cancel
        </span>
        <!----></button>
      <div class="dropdown dropdown-menu-animation is-mobile-modal">
        <div role="button" aria-haspopup="true" class="dropdown-trigger"><span data-label="More actions" class="is-primary is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button outlined="" class="button is-primary"><span class="icon"><i class="mdi mdi-menu-down mdi-24px"></i></span></button></span></div>
        <div aria-hidden="true" class="background" style="display: none;"></div>
        <div aria-hidden="true" class="dropdown-menu" style="display: none;">
          <div role="list" class="dropdown-content"> <a role="listitem" tabindex="0" class="dropdown-item"><button type="button" class="button is-warning"><span class="icon is-small"><i class="mdi mdi-lock"></i></span> <span>Lock tournament
            </span>
                <!----></button></a> <a role="listitem" tabindex="0" class="dropdown-item"><button type="button" class="button is-danger is-outlined"><span class="icon is-small"><i class="mdi mdi-delete"></i></span> <span>Delete tournamet</span>
                <!----></button></a></div>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`TournamentDetailRow Renders new locked tournament correctly 1`] = `
<div class="collapse card">
  <div class="collapse-trigger">
    <div role="button" class="card-header"><span class="card-header-title"><span>Edit tournament</span></span> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-down mdi-24px"></i></span></a></div>
  </div>
  <div id="newEntryForm" aria-expanded="true" class="collapse-content">
    <div class="card-content">
      <div class="columns">
        <div class="column is-half">
          <div class="field">
            <div class="columns">
              <div class="column is-half">
                <div class="field is-floating-label"><label class="label">Name of tournament</label>
                  <div class="control is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" disabled="disabled" class="input">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="column is-half">
                <div class="field has-addons">
                  <!---->
                  <div class="control is-expanded"><label disabled="disabled" class="b-radio radio button is-primary is-disabled">
                      International
                      <input type="radio" disabled="disabled" value="true"></label></div>
                  <div class="control is-expanded"><label disabled="disabled" class="b-radio radio button is-disabled">
                      National
                      <input type="radio" disabled="disabled" value="false"></label></div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label has-addons"><label class="label">Place of the tournament</label>
              <div class="control has-icons-left is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" placeholder="City" disabled="disabled" class="input"> <span class="icon is-left"><i class="mdi mdi-city mdi-24px"></i></span>
                <!---->
                <!---->
              </div>
              <div class="control has-icons-left is-expanded is-clearfix"><input type="text" autocomplete="on" disabled="disabled" class="input"> <span class="icon is-left"><i class="mdi mdi-earth mdi-24px"></i></span>
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label"><label class="label">Dates</label>
              <div class="datepicker control">
                <div class="dropdown dropdown-menu-animation is-disabled is-inline is-active">
                  <!---->
                  <!---->
                  <div aria-hidden="true" class="dropdown-menu">
                    <div class="dropdown-content">
                      <!---->
                      <div tabindex="0" class="dropdown-item is-disabled">
                        <div>
                          <header class="datepicker-header">
                            <div class="pagination field is-centered"><a role="button" href="#" disabled="disabled" class="pagination-previous" style="display: none;"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-next" style="display: none;"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
                              <div class="pagination-list">
                                <div class="field has-addons">
                                  <!---->
                                  <div class="control"><span class="select"><select disabled="disabled"><!----> <option value="0">
                                            January
                                        </option><option value="1">
                                            February
                                        </option><option value="2">
                                            March
                                        </option><option value="3">
                                            April
                                        </option><option value="4">
                                            May
                                        </option><option value="5">
                                            June
                                        </option><option value="6">
                                            July
                                        </option><option value="7">
                                            August
                                        </option><option value="8">
                                            September
                                        </option><option value="9">
                                            October
                                        </option><option value="10">
                                            November
                                        </option><option value="11">
                                            December
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <div class="control"><span class="select"><select disabled="disabled"><!----> <option value="2021">
                                            2021
                                        </option><option value="2020">
                                            2020
                                        </option><option value="2019">
                                            2019
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <!---->
                                </div>
                              </div>
                            </div>
                          </header>
                          <div class="datepicker-content">
                            <section class="datepicker-table">
                              <header class="datepicker-header">
                                <div class="datepicker-cell"><span>M</span></div>
                                <div class="datepicker-cell"><span>Tu</span></div>
                                <div class="datepicker-cell"><span>W</span></div>
                                <div class="datepicker-cell"><span>Th</span></div>
                                <div class="datepicker-cell"><span>F</span></div>
                                <div class="datepicker-cell"><span>S</span></div>
                                <div class="datepicker-cell"><span>Su</span></div>
                              </header>
                              <div class="datepicker-body">
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>27</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>28</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>29</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>30</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>31</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>1</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>2</span></div>
                                </div>
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>3</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>4</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>5</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>6</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>7</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>8</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>9</span></div>
                                </div>
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>10</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>11</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>12</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>13</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>14</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>15</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>16</span></div>
                                </div>
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>17</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>18</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>19</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>20</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>21</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>22</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>23</span></div>
                                </div>
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-selected is-first-selected is-last-selected is-unselectable"><span>24</span></div>
                                  <div class="datepicker-cell is-today is-unselectable"><span>25</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>26</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>27</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>28</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>29</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>30</span></div>
                                </div>
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>31</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>1</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>2</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>3</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>4</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>5</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>6</span></div>
                                </div>
                              </div>
                            </section>
                          </div>
                        </div>
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div class="field"><label class="label"><button type="button" class="button is-text">
                <!----> <span>Notes (0)
                  </span> <span class="icon is-small"><i class="mdi mdi-menu-up"></i></span></button></label>
            <!---->
            <div class="field is-floating-label has-addons"><label class="label">Add a note</label>
              <div class="control is-expanded is-clearfix"><textarea maxlength="256" placeholder="Type a message" rows="1" class="textarea"></textarea>
                <!---->
                <!----> <small class="help counter is-invisible">
                  0 / 256
                </small></div> <button type="button" class="button add-note-btn is-info"><span class="icon is-small"><i class="mdi mdi-comment-text-outline"></i></span> <span>Add note
                  </span>
                <!----></button>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div class="column is-half">
          <div id="td-field" class="field">
            <div class="field"><label class="label">Tournament Director / TD</label>
              <div class="columns">
                <!---->
                <div class="column is-half"><span class="tag td-tag is-medium is-rounded"><span class="">
                            John Doe
                            &lt;john.doe@example.org&gt;
                        </span> <a role="button" tabindex="0" class="delete is-small"></a></span></div>
              </div>
              <!---->
            </div>
          </div>
          <div id="referees-field" class="field">
            <div class="field"><label class="label">Referees</label>
              <!---->
            </div>
            <div class="b-table no-margin-on-control referee-table">
              <!---->
              <!---->
              <div class="table-wrapper has-mobile-cards">
                <table class="table is-hoverable">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap">Name
                          <!---->
                        </div>
                      </th>
                      <th class="" style="width: 140px;">
                        <div class="th-wrap is-centered">Games as referee
                          <!---->
                        </div>
                      </th>
                      <th class="" style="width: 140px;">
                        <div class="th-wrap is-centered">Games as 10s / official
                          <!---->
                        </div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        John Doe
                      </td>
                      <td data-label="Games as referee" class="has-text-centered"><span>0</span></td>
                      <td data-label="Games as 10s / official" class="has-text-centered"><span>0</span></td>
                      <!---->
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        Jane Doe
                      </td>
                      <td data-label="Games as referee" class="has-text-centered"><span>1</span></td>
                      <td data-label="Games as 10s / official" class="has-text-centered"><span>1</span></td>
                      <!---->
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class="">
                        Noob Nederson
                      </td>
                      <td data-label="Games as referee" class="has-text-centered"><span>2</span></td>
                      <td data-label="Games as 10s / official" class="has-text-centered"><span>2</span></td>
                      <!---->
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </tbody>
                  <!---->
                </table>
              </div>
              <!---->
            </div>
            <!---->
          </div>
          <div class="field">
            <div class="field"><label class="label">Teams competing</label>
              <div>
                <!---->
                <div class="team-list"><span class="tag is-medium"><span class="">
        Team A
    </span>
                  <!----></span><span class="tag is-medium"><span class="">
        Team B
    </span>
                  <!----></span></div>
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div><strong><span class="icon"><i class="mdi mdi-lock mdi-24px"></i></span> Tournament is locked</strong> <span data-label="Unlock to allow modifications" class="is-warning is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-text"><!----> <span>
              Unlock
            </span> <span class="icon is-small"><i class="mdi mdi-lock-open-variant"></i></span></button></span></div>
      <div class="tournament-meta">
        Created by John Doe at 7/24/2020.
        Last update: 8/19/2020.
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TournamentDetailRow Renders new tournament correctly 1`] = `
<div class="collapse card">
  <div class="collapse-trigger">
    <div role="button" class="card-header"><span class="card-header-title"><span>Add new tournament</span></span> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-down mdi-24px"></i></span></a></div>
  </div>
  <div id="newEntryForm" aria-expanded="true" class="collapse-content">
    <div class="card-content">
      <div class="columns">
        <div class="column is-half">
          <div class="field">
            <div class="columns">
              <div class="column is-half">
                <div class="field is-floating-label"><label class="label">Name of tournament</label>
                  <div class="control is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" class="input">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="column is-half">
                <div class="field has-addons">
                  <!---->
                  <div class="control is-expanded"><label class="b-radio radio button is-primary">
                      International
                      <input type="radio" value="true"></label></div>
                  <div class="control is-expanded"><label class="b-radio radio button">
                      National
                      <input type="radio" value="false"></label></div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label has-addons"><label class="label">Place of the tournament</label>
              <div class="control has-icons-left is-expanded is-clearfix"><input type="text" autocomplete="on" required="required" placeholder="City" class="input"> <span class="icon is-left"><i class="mdi mdi-city mdi-24px"></i></span>
                <!---->
                <!---->
              </div>
              <div class="autocomplete control is-expanded">
                <div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" placeholder="Country" class="input"> <span class="icon is-left"><i class="mdi mdi-earth mdi-24px"></i></span>
                  <!---->
                  <!---->
                </div>
                <div class="dropdown-menu" style="display: none;">
                  <div class="dropdown-content" style="display: none;">
                    <!----> <a class="dropdown-item"><span>
                            Afghanistan
                        </span></a><a class="dropdown-item"><span>
                            Aland Islands
                        </span></a><a class="dropdown-item"><span>
                            Albania
                        </span></a><a class="dropdown-item"><span>
                            Algeria
                        </span></a><a class="dropdown-item"><span>
                            American Samoa
                        </span></a><a class="dropdown-item"><span>
                            Andorra
                        </span></a><a class="dropdown-item"><span>
                            Angola
                        </span></a><a class="dropdown-item"><span>
                            Anguilla
                        </span></a><a class="dropdown-item"><span>
                            Antarctica
                        </span></a><a class="dropdown-item"><span>
                            Antigua and Barbuda
                        </span></a><a class="dropdown-item"><span>
                            Argentina
                        </span></a><a class="dropdown-item"><span>
                            Armenia
                        </span></a><a class="dropdown-item"><span>
                            Aruba
                        </span></a><a class="dropdown-item"><span>
                            Australia
                        </span></a><a class="dropdown-item"><span>
                            Austria
                        </span></a><a class="dropdown-item"><span>
                            Azerbaijan
                        </span></a><a class="dropdown-item"><span>
                            Bahamas
                        </span></a><a class="dropdown-item"><span>
                            Bahrain
                        </span></a><a class="dropdown-item"><span>
                            Bangladesh
                        </span></a><a class="dropdown-item"><span>
                            Barbados
                        </span></a><a class="dropdown-item"><span>
                            Belarus
                        </span></a><a class="dropdown-item"><span>
                            Belgium
                        </span></a><a class="dropdown-item"><span>
                            Belize
                        </span></a><a class="dropdown-item"><span>
                            Benin
                        </span></a><a class="dropdown-item"><span>
                            Bermuda
                        </span></a><a class="dropdown-item"><span>
                            Bhutan
                        </span></a><a class="dropdown-item"><span>
                            Bolivia
                        </span></a><a class="dropdown-item"><span>
                            Bonaire, Saint Eustatius and Saba 
                        </span></a><a class="dropdown-item"><span>
                            Bosnia and Herzegovina
                        </span></a><a class="dropdown-item"><span>
                            Botswana
                        </span></a><a class="dropdown-item"><span>
                            Bouvet Island
                        </span></a><a class="dropdown-item"><span>
                            Brazil
                        </span></a><a class="dropdown-item"><span>
                            British Indian Ocean Territory
                        </span></a><a class="dropdown-item"><span>
                            British Virgin Islands
                        </span></a><a class="dropdown-item"><span>
                            Brunei
                        </span></a><a class="dropdown-item"><span>
                            Bulgaria
                        </span></a><a class="dropdown-item"><span>
                            Burkina Faso
                        </span></a><a class="dropdown-item"><span>
                            Burundi
                        </span></a><a class="dropdown-item"><span>
                            Cambodia
                        </span></a><a class="dropdown-item"><span>
                            Cameroon
                        </span></a><a class="dropdown-item"><span>
                            Canada
                        </span></a><a class="dropdown-item"><span>
                            Cape Verde
                        </span></a><a class="dropdown-item"><span>
                            Cayman Islands
                        </span></a><a class="dropdown-item"><span>
                            Central African Republic
                        </span></a><a class="dropdown-item"><span>
                            Chad
                        </span></a><a class="dropdown-item"><span>
                            Chile
                        </span></a><a class="dropdown-item"><span>
                            China
                        </span></a><a class="dropdown-item"><span>
                            Christmas Island
                        </span></a><a class="dropdown-item"><span>
                            Cocos Islands
                        </span></a><a class="dropdown-item"><span>
                            Colombia
                        </span></a><a class="dropdown-item"><span>
                            Comoros
                        </span></a><a class="dropdown-item"><span>
                            Cook Islands
                        </span></a><a class="dropdown-item"><span>
                            Costa Rica
                        </span></a><a class="dropdown-item"><span>
                            Croatia
                        </span></a><a class="dropdown-item"><span>
                            Cuba
                        </span></a><a class="dropdown-item"><span>
                            Curacao
                        </span></a><a class="dropdown-item"><span>
                            Cyprus
                        </span></a><a class="dropdown-item"><span>
                            Czech Republic
                        </span></a><a class="dropdown-item"><span>
                            Democratic Republic of the Congo
                        </span></a><a class="dropdown-item"><span>
                            Denmark
                        </span></a><a class="dropdown-item"><span>
                            Djibouti
                        </span></a><a class="dropdown-item"><span>
                            Dominica
                        </span></a><a class="dropdown-item"><span>
                            Dominican Republic
                        </span></a><a class="dropdown-item"><span>
                            East Timor
                        </span></a><a class="dropdown-item"><span>
                            Ecuador
                        </span></a><a class="dropdown-item"><span>
                            Egypt
                        </span></a><a class="dropdown-item"><span>
                            El Salvador
                        </span></a><a class="dropdown-item"><span>
                            Equatorial Guinea
                        </span></a><a class="dropdown-item"><span>
                            Eritrea
                        </span></a><a class="dropdown-item"><span>
                            Estonia
                        </span></a><a class="dropdown-item"><span>
                            Ethiopia
                        </span></a><a class="dropdown-item"><span>
                            Falkland Islands
                        </span></a><a class="dropdown-item"><span>
                            Faroe Islands
                        </span></a><a class="dropdown-item"><span>
                            Fiji
                        </span></a><a class="dropdown-item"><span>
                            Finland
                        </span></a><a class="dropdown-item"><span>
                            France
                        </span></a><a class="dropdown-item"><span>
                            French Guiana
                        </span></a><a class="dropdown-item"><span>
                            French Polynesia
                        </span></a><a class="dropdown-item"><span>
                            French Southern Territories
                        </span></a><a class="dropdown-item"><span>
                            Gabon
                        </span></a><a class="dropdown-item"><span>
                            Gambia
                        </span></a><a class="dropdown-item"><span>
                            Georgia
                        </span></a><a class="dropdown-item"><span>
                            Germany
                        </span></a><a class="dropdown-item"><span>
                            Ghana
                        </span></a><a class="dropdown-item"><span>
                            Gibraltar
                        </span></a><a class="dropdown-item"><span>
                            Greece
                        </span></a><a class="dropdown-item"><span>
                            Greenland
                        </span></a><a class="dropdown-item"><span>
                            Grenada
                        </span></a><a class="dropdown-item"><span>
                            Guadeloupe
                        </span></a><a class="dropdown-item"><span>
                            Guam
                        </span></a><a class="dropdown-item"><span>
                            Guatemala
                        </span></a><a class="dropdown-item"><span>
                            Guernsey
                        </span></a><a class="dropdown-item"><span>
                            Guinea
                        </span></a><a class="dropdown-item"><span>
                            Guinea-Bissau
                        </span></a><a class="dropdown-item"><span>
                            Guyana
                        </span></a><a class="dropdown-item"><span>
                            Haiti
                        </span></a><a class="dropdown-item"><span>
                            Heard Island and McDonald Islands
                        </span></a><a class="dropdown-item"><span>
                            Honduras
                        </span></a><a class="dropdown-item"><span>
                            Hong Kong
                        </span></a><a class="dropdown-item"><span>
                            Hungary
                        </span></a><a class="dropdown-item"><span>
                            Iceland
                        </span></a><a class="dropdown-item"><span>
                            India
                        </span></a><a class="dropdown-item"><span>
                            Indonesia
                        </span></a><a class="dropdown-item"><span>
                            Iran
                        </span></a><a class="dropdown-item"><span>
                            Iraq
                        </span></a><a class="dropdown-item"><span>
                            Ireland
                        </span></a><a class="dropdown-item"><span>
                            Isle of Man
                        </span></a><a class="dropdown-item"><span>
                            Israel
                        </span></a><a class="dropdown-item"><span>
                            Italy
                        </span></a><a class="dropdown-item"><span>
                            Ivory Coast
                        </span></a><a class="dropdown-item"><span>
                            Jamaica
                        </span></a><a class="dropdown-item"><span>
                            Japan
                        </span></a><a class="dropdown-item"><span>
                            Jersey
                        </span></a><a class="dropdown-item"><span>
                            Jordan
                        </span></a><a class="dropdown-item"><span>
                            Kazakhstan
                        </span></a><a class="dropdown-item"><span>
                            Kenya
                        </span></a><a class="dropdown-item"><span>
                            Kiribati
                        </span></a><a class="dropdown-item"><span>
                            Kosovo
                        </span></a><a class="dropdown-item"><span>
                            Kuwait
                        </span></a><a class="dropdown-item"><span>
                            Kyrgyzstan
                        </span></a><a class="dropdown-item"><span>
                            Laos
                        </span></a><a class="dropdown-item"><span>
                            Latvia
                        </span></a><a class="dropdown-item"><span>
                            Lebanon
                        </span></a><a class="dropdown-item"><span>
                            Lesotho
                        </span></a><a class="dropdown-item"><span>
                            Liberia
                        </span></a><a class="dropdown-item"><span>
                            Libya
                        </span></a><a class="dropdown-item"><span>
                            Liechtenstein
                        </span></a><a class="dropdown-item"><span>
                            Lithuania
                        </span></a><a class="dropdown-item"><span>
                            Luxembourg
                        </span></a><a class="dropdown-item"><span>
                            Macao
                        </span></a><a class="dropdown-item"><span>
                            Macedonia
                        </span></a><a class="dropdown-item"><span>
                            Madagascar
                        </span></a><a class="dropdown-item"><span>
                            Malawi
                        </span></a><a class="dropdown-item"><span>
                            Malaysia
                        </span></a><a class="dropdown-item"><span>
                            Maldives
                        </span></a><a class="dropdown-item"><span>
                            Mali
                        </span></a><a class="dropdown-item"><span>
                            Malta
                        </span></a><a class="dropdown-item"><span>
                            Marshall Islands
                        </span></a><a class="dropdown-item"><span>
                            Martinique
                        </span></a><a class="dropdown-item"><span>
                            Mauritania
                        </span></a><a class="dropdown-item"><span>
                            Mauritius
                        </span></a><a class="dropdown-item"><span>
                            Mayotte
                        </span></a><a class="dropdown-item"><span>
                            Mexico
                        </span></a><a class="dropdown-item"><span>
                            Micronesia
                        </span></a><a class="dropdown-item"><span>
                            Moldova
                        </span></a><a class="dropdown-item"><span>
                            Monaco
                        </span></a><a class="dropdown-item"><span>
                            Mongolia
                        </span></a><a class="dropdown-item"><span>
                            Montenegro
                        </span></a><a class="dropdown-item"><span>
                            Montserrat
                        </span></a><a class="dropdown-item"><span>
                            Morocco
                        </span></a><a class="dropdown-item"><span>
                            Mozambique
                        </span></a><a class="dropdown-item"><span>
                            Myanmar
                        </span></a><a class="dropdown-item"><span>
                            Namibia
                        </span></a><a class="dropdown-item"><span>
                            Nauru
                        </span></a><a class="dropdown-item"><span>
                            Nepal
                        </span></a><a class="dropdown-item"><span>
                            Netherlands
                        </span></a><a class="dropdown-item"><span>
                            New Caledonia
                        </span></a><a class="dropdown-item"><span>
                            New Zealand
                        </span></a><a class="dropdown-item"><span>
                            Nicaragua
                        </span></a><a class="dropdown-item"><span>
                            Niger
                        </span></a><a class="dropdown-item"><span>
                            Nigeria
                        </span></a><a class="dropdown-item"><span>
                            Niue
                        </span></a><a class="dropdown-item"><span>
                            Norfolk Island
                        </span></a><a class="dropdown-item"><span>
                            North Korea
                        </span></a><a class="dropdown-item"><span>
                            Northern Mariana Islands
                        </span></a><a class="dropdown-item"><span>
                            Norway
                        </span></a><a class="dropdown-item"><span>
                            Oman
                        </span></a><a class="dropdown-item"><span>
                            Pakistan
                        </span></a><a class="dropdown-item"><span>
                            Palau
                        </span></a><a class="dropdown-item"><span>
                            Palestinian Territory
                        </span></a><a class="dropdown-item"><span>
                            Panama
                        </span></a><a class="dropdown-item"><span>
                            Papua New Guinea
                        </span></a><a class="dropdown-item"><span>
                            Paraguay
                        </span></a><a class="dropdown-item"><span>
                            Peru
                        </span></a><a class="dropdown-item"><span>
                            Philippines
                        </span></a><a class="dropdown-item"><span>
                            Pitcairn
                        </span></a><a class="dropdown-item"><span>
                            Poland
                        </span></a><a class="dropdown-item"><span>
                            Portugal
                        </span></a><a class="dropdown-item"><span>
                            Puerto Rico
                        </span></a><a class="dropdown-item"><span>
                            Qatar
                        </span></a><a class="dropdown-item"><span>
                            Republic of the Congo
                        </span></a><a class="dropdown-item"><span>
                            Reunion
                        </span></a><a class="dropdown-item"><span>
                            Romania
                        </span></a><a class="dropdown-item"><span>
                            Russia
                        </span></a><a class="dropdown-item"><span>
                            Rwanda
                        </span></a><a class="dropdown-item"><span>
                            Saint Barthelemy
                        </span></a><a class="dropdown-item"><span>
                            Saint Helena
                        </span></a><a class="dropdown-item"><span>
                            Saint Kitts and Nevis
                        </span></a><a class="dropdown-item"><span>
                            Saint Lucia
                        </span></a><a class="dropdown-item"><span>
                            Saint Martin
                        </span></a><a class="dropdown-item"><span>
                            Saint Pierre and Miquelon
                        </span></a><a class="dropdown-item"><span>
                            Saint Vincent and the Grenadines
                        </span></a><a class="dropdown-item"><span>
                            Samoa
                        </span></a><a class="dropdown-item"><span>
                            San Marino
                        </span></a><a class="dropdown-item"><span>
                            Sao Tome and Principe
                        </span></a><a class="dropdown-item"><span>
                            Saudi Arabia
                        </span></a><a class="dropdown-item"><span>
                            Senegal
                        </span></a><a class="dropdown-item"><span>
                            Serbia
                        </span></a><a class="dropdown-item"><span>
                            Seychelles
                        </span></a><a class="dropdown-item"><span>
                            Sierra Leone
                        </span></a><a class="dropdown-item"><span>
                            Singapore
                        </span></a><a class="dropdown-item"><span>
                            Sint Maarten
                        </span></a><a class="dropdown-item"><span>
                            Slovakia
                        </span></a><a class="dropdown-item"><span>
                            Slovenia
                        </span></a><a class="dropdown-item"><span>
                            Solomon Islands
                        </span></a><a class="dropdown-item"><span>
                            Somalia
                        </span></a><a class="dropdown-item"><span>
                            South Africa
                        </span></a><a class="dropdown-item"><span>
                            South Georgia and the South Sandwich Islands
                        </span></a><a class="dropdown-item"><span>
                            South Korea
                        </span></a><a class="dropdown-item"><span>
                            South Sudan
                        </span></a><a class="dropdown-item"><span>
                            Spain
                        </span></a><a class="dropdown-item"><span>
                            Sri Lanka
                        </span></a><a class="dropdown-item"><span>
                            Sudan
                        </span></a><a class="dropdown-item"><span>
                            Suriname
                        </span></a><a class="dropdown-item"><span>
                            Svalbard and Jan Mayen
                        </span></a><a class="dropdown-item"><span>
                            Swaziland
                        </span></a><a class="dropdown-item"><span>
                            Sweden
                        </span></a><a class="dropdown-item"><span>
                            Switzerland
                        </span></a><a class="dropdown-item"><span>
                            Syria
                        </span></a><a class="dropdown-item"><span>
                            Taiwan
                        </span></a><a class="dropdown-item"><span>
                            Tajikistan
                        </span></a><a class="dropdown-item"><span>
                            Tanzania
                        </span></a><a class="dropdown-item"><span>
                            Thailand
                        </span></a><a class="dropdown-item"><span>
                            Togo
                        </span></a><a class="dropdown-item"><span>
                            Tokelau
                        </span></a><a class="dropdown-item"><span>
                            Tonga
                        </span></a><a class="dropdown-item"><span>
                            Trinidad and Tobago
                        </span></a><a class="dropdown-item"><span>
                            Tunisia
                        </span></a><a class="dropdown-item"><span>
                            Turkey
                        </span></a><a class="dropdown-item"><span>
                            Turkmenistan
                        </span></a><a class="dropdown-item"><span>
                            Turks and Caicos Islands
                        </span></a><a class="dropdown-item"><span>
                            Tuvalu
                        </span></a><a class="dropdown-item"><span>
                            U.S. Virgin Islands
                        </span></a><a class="dropdown-item"><span>
                            Uganda
                        </span></a><a class="dropdown-item"><span>
                            Ukraine
                        </span></a><a class="dropdown-item"><span>
                            United Arab Emirates
                        </span></a><a class="dropdown-item"><span>
                            United Kingdom
                        </span></a><a class="dropdown-item"><span>
                            United States
                        </span></a><a class="dropdown-item"><span>
                            United States Minor Outlying Islands
                        </span></a><a class="dropdown-item"><span>
                            Uruguay
                        </span></a><a class="dropdown-item"><span>
                            Uzbekistan
                        </span></a><a class="dropdown-item"><span>
                            Vanuatu
                        </span></a><a class="dropdown-item"><span>
                            Vatican
                        </span></a><a class="dropdown-item"><span>
                            Venezuela
                        </span></a><a class="dropdown-item"><span>
                            Vietnam
                        </span></a><a class="dropdown-item"><span>
                            Wallis and Futuna
                        </span></a><a class="dropdown-item"><span>
                            Western Sahara
                        </span></a><a class="dropdown-item"><span>
                            Yemen
                        </span></a><a class="dropdown-item"><span>
                            Zambia
                        </span></a><a class="dropdown-item"><span>
                            Zimbabwe
                        </span></a>
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div class="field">
            <div class="field is-floating-label"><label class="label">Dates</label>
              <div class="datepicker control">
                <div class="dropdown dropdown-menu-animation is-inline is-active">
                  <!---->
                  <!---->
                  <div aria-hidden="true" class="dropdown-menu">
                    <div class="dropdown-content">
                      <!---->
                      <div tabindex="0" class="dropdown-item">
                        <div>
                          <header class="datepicker-header">
                            <div class="pagination field is-centered"><a role="button" href="#" class="pagination-previous"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" class="pagination-next"><span class="icon has-text-primary is-clickable"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
                              <div class="pagination-list">
                                <div class="field has-addons">
                                  <!---->
                                  <div class="control"><span class="select"><select><!----> <option value="0">
                                            January
                                        </option><option value="1">
                                            February
                                        </option><option value="2">
                                            March
                                        </option><option value="3">
                                            April
                                        </option><option value="4">
                                            May
                                        </option><option value="5">
                                            June
                                        </option><option value="6">
                                            July
                                        </option><option value="7">
                                            August
                                        </option><option value="8">
                                            September
                                        </option><option value="9">
                                            October
                                        </option><option value="10">
                                            November
                                        </option><option value="11">
                                            December
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <div class="control"><span class="select"><select><!----> <option value="2021">
                                            2021
                                        </option><option value="2020">
                                            2020
                                        </option><option value="2019">
                                            2019
                                        </option></select></span>
                                    <!---->
                                  </div>
                                  <!---->
                                </div>
                              </div>
                            </div>
                          </header>
                          <div class="datepicker-content">
                            <section class="datepicker-table">
                              <header class="datepicker-header">
                                <div class="datepicker-cell"><span>M</span></div>
                                <div class="datepicker-cell"><span>Tu</span></div>
                                <div class="datepicker-cell"><span>W</span></div>
                                <div class="datepicker-cell"><span>Th</span></div>
                                <div class="datepicker-cell"><span>F</span></div>
                                <div class="datepicker-cell"><span>S</span></div>
                                <div class="datepicker-cell"><span>Su</span></div>
                              </header>
                              <div class="datepicker-body">
                                <div class="datepicker-row">
                                  <!---->
                                  <div class="datepicker-cell is-unselectable"><span>27</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>28</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>29</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>30</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>31</span></div><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>1</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>2</span>
                                    <!----></a>
                                </div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>3</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>4</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>5</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>6</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>7</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>8</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>9</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>10</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>11</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>12</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>13</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>14</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>15</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>16</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>17</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>18</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>19</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>20</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>21</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>22</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>23</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>24</span>
                                    <!----></a><a role="button" href="#" class="datepicker-cell is-today is-selectable dots"><span>25</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>26</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>27</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>28</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>29</span>
                                    <!----></a><a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>30</span>
                                    <!----></a></div>
                                <div class="datepicker-row">
                                  <!----> <a role="button" href="#" tabindex="-1" class="datepicker-cell is-selectable dots"><span>31</span>
                                    <!----></a>
                                  <div class="datepicker-cell is-unselectable"><span>1</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>2</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>3</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>4</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>5</span></div>
                                  <div class="datepicker-cell is-unselectable"><span>6</span></div>
                                </div>
                              </div>
                            </section>
                          </div>
                        </div>
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div class="field"><label class="label"><button type="button" class="button is-text">
                <!----> <span>Notes (0)
                  </span> <span class="icon is-small"><i class="mdi mdi-menu-up"></i></span></button></label>
            <!---->
            <div class="field is-floating-label has-addons"><label class="label">Add a note</label>
              <div class="control is-expanded is-clearfix"><textarea maxlength="256" placeholder="Type a message" rows="1" class="textarea"></textarea>
                <!---->
                <!----> <small class="help counter is-invisible">
                  0 / 256
                </small></div> <button type="button" class="button add-note-btn is-info"><span class="icon is-small"><i class="mdi mdi-comment-text-outline"></i></span> <span>Add note
                  </span>
                <!----></button>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div class="column is-half">
          <div id="td-field" class="field">
            <div class="field"><label class="label">Tournament Director / TD</label>
              <div class="columns">
                <div class="column is-full">
                  <div class="field has-addons">
                    <!---->
                    <div class="autocomplete control td-autocomplete is-expanded">
                      <div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" placeholder="Search by name or email" class="input"> <span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
                        <!---->
                        <!---->
                      </div>
                      <div class="dropdown-menu" style="display: none;">
                        <div class="dropdown-content" style="display: none;">
                          <!---->
                          <div class="dropdown-item is-disabled"><a><span class="icon"><i class="mdi mdi-account-plus mdi-24px"></i></span>
                              Add TD...
                            </a></div>
                          <!---->
                        </div>
                      </div>
                    </div> <span data-label="Set yourself as the TD" class="is-info is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" title="Set yourself as TD" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account-circle-outline"></i></span>
                    <!---->
                    <!----></button></span>
                    <!---->
                  </div>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div id="referees-field" class="field">
            <div class="field"><label class="label">Referees</label>
              <!---->
            </div>
            <div class="b-table no-margin-on-control referee-table">
              <!---->
              <!---->
              <div class="table-wrapper has-mobile-cards">
                <table class="table">
                  <!---->
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="0"></td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
              </div>
              <!---->
            </div>
            <div class="field is-floating-label has-addons"><label class="label">Add referee</label>
              <div class="autocomplete control is-expanded">
                <div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" placeholder="Search by name, email or nationality" class="input"> <span class="icon is-left"><i class="mdi mdi-magnify mdi-24px"></i></span>
                  <!---->
                  <!---->
                </div>
                <div class="dropdown-menu" style="display: none;">
                  <div class="dropdown-content" style="display: none;">
                    <!---->
                    <div class="dropdown-item is-disabled">
                      No results for
                      <button type="button" class="button is-text"><span class="icon is-small"><i class="mdi mdi-account-plus"></i></span> <span>
                              New referee
                            </span>
                        <!----></button></div>
                    <!---->
                  </div>
                </div>
              </div> <span data-label="Add new referee to system" class="is-info is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-info is-outlined"><span class="icon is-small"><i class="mdi mdi-account-plus"></i></span> <span>
                        New referee
                      </span>
              <!----></button></span> <span data-label="Add yourself as a referee" class="is-info is-top is-medium b-tooltip" style="transition-delay: 0ms;"><button type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account-circle-outline"></i></span>
              <!---->
              <!----></button></span>
              <!---->
            </div>
          </div>
          <div class="field">
            <div class="field"><label class="label">Teams competing</label>
              <div>
                <div class="field has-addons">
                  <!---->
                  <div class="autocomplete control is-expanded">
                    <div class="control is-clearfix"><input type="text" autocomplete="off" placeholder="Team name / Country" class="input">
                      <!---->
                      <!---->
                      <!---->
                    </div>
                    <div class="dropdown-menu" style="display: none;">
                      <div class="dropdown-content" style="display: none;">
                        <!---->
                        <!---->
                        <!---->
                      </div>
                    </div>
                  </div> <button type="button" disabled="disabled" class="button is-info"><span class="icon is-small"><i class="mdi mdi-plus"></i></span> <span>
      Add
    </span>
                    <!----></button>
                  <!---->
                </div>
                <div class="team-list"></div>
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
    <div class="card-footer"><button type="button" disabled="disabled" class="button card-footer-item is-primary is-outlined"><span class="icon is-small"><i class="mdi mdi-check-circle-outline"></i></span> <span>
            Save
        </span>
        <!----></button> <button type="button" class="button card-footer-item is-light"><span class="icon is-small"><i class="mdi mdi-cancel"></i></span> <span>
            Cancel
        </span>
        <!----></button>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;
